# imagiro_processor

./: CMakeLists.txt  Processor.h  README.md  Scale.h  imagiro-processor.cpp  imagiro-processor.h  imagiro_processor.cpp  imagiro_processor.h
config/: PluginConfig.cpp  PluginConfig.h
include/imagiro_processor/: AudioNode.h  AudioTimer.h  BufferFileLoader.cpp  BufferFileLoader.h
include/imagiro_processor/bufferpool/: BufferCache.h  BufferLoader.cpp  BufferLoader.h  BufferRequest.cpp  BufferRequest.h  BufferRequestHandle.cpp  BufferRequestHandle.h  CacheTypes.h  CommonTransforms.h  FileBufferCache.cpp  FileBufferCache.h  InfoBuffer.h  Transform.h
include/imagiro_processor/config/: AuthorizationManager.cpp  Resources.h
include/imagiro_processor/curve/: Curve.h  Point2D.h  Serializers.h
include/imagiro_processor/dsp/: EnvelopeFollower.h  FastRandom.h  LFO.h  LookupTableLFO.h  interpolation.h  util.h
include/imagiro_processor/envelope/: Envelope.h
include/imagiro_processor/grain/: Grain.cpp  Grain.h  GrainSampleData.h  GrainSerializer.h  GrainSettings.h  GrainSettingsSerializer.h  MipmappedBuffer.h
include/imagiro_processor/note/: ScaledMPENote.h
include/imagiro_processor/parameter/: JuceParamAdapter.h  ParamConfig.h  ParamController.h  ParamCreator.h  ParamFormat.h  ParamMember.h  ParamRange.h  ParamValue.h  ValueFormatter.h
include/imagiro_processor/preset/: Preset.h  PresetMetadata.h
include/imagiro_processor/processor/: BypassMixer.h  Processor.h  ProcessorBase.h  TransportState.h
include/imagiro_processor/processors/: ChainManager.h
include/imagiro_processor/synth/: MPESynth.h
include/imagiro_processor/valuedata/: ImmerJson.h  Serialize.h  Serializers.h  ValueData.h
include/sigslot/: sigslot.h
modulation/: EnvFollowModulator.h  EnvelopeSource.h  LFO.h  MacroModulator.h  ModulationMatrix.h  MultiModulator.h
parameter/: Parameter.h  ParameterHelpers.h  ParameterLoader.cpp  ParameterLoader.h
preset/: IPCPresetSynchroniser.h  Preset.h
src/: AudioTimer.h  BufferFileLoader.cpp  BufferFileLoader.h  Processor.cpp  Processor.h  ProcessorBase.cpp  ProcessorBase.h  Scale.h  StringData.h
src/bufferpool/: BufferCache.h  BufferLoader.cpp  BufferLoader.h  BufferRequest.cpp  BufferRequest.h  BufferRequestHandle.cpp  BufferRequestHandle.h  CacheEntry.h  CacheTypes.h  CommonTransforms.h  FileBufferCache.cpp  FileBufferCache.h  FileCache.h  InfoBuffer.h
src/config/: Authorization.cpp  Authorization.h  AuthorizationManager.cpp  AuthorizationManager.h  PluginConfig.cpp  PluginConfig.h  Resources.h  VersionManager.cpp  VersionManager.h
src/curve/: Bezier.h  Curve.h  CurvePoint.h  Serializers.h
src/curve/2d/: BezierSegment.h  Path2D.h
src/dsp/: DCBlocker.h  EnvelopeFollower.h  FastRandom.h  LFO.h  LookupTableLFO.h  XORRandom.h  interpolation.h
src/dsp/filter/: CascadedBiquadFilter.h  CascadedOnePoleFilter.h  StateVariableTPTFilter.h
src/dsp/pitch/: PitchYIN.h
src/dsp/transient/: TransientDetector.cpp  TransientDetector.h
src/envelope/: Envelope.h
src/envelope/adsr/: ADSR.cpp  ADSR.h
src/grain/: Grain.cpp  Grain.h  GrainBuffer.cpp  GrainBuffer.h  GrainSettings.h  MipmappedBuffer.h
src/modulation/: LFO.h  LFOModulator.h  ModulationMatrix.cpp  ModulationMatrix.h  Modulator.h  PulseModulator.h  RandomModulator.h
src/note/: ScaledMPENote.h
src/note/env-shape/: Bezier.h  Segment.cpp  Segment.h  SegmentCurve.cpp  (+1 more)
src/parameter/: DisplayValue.h  Parameter.cpp  Parameter.h  ParameterConfig.h  ParameterContainer.h  ParameterHelpers.cpp  ParameterHelpers.h  ParameterLoader.cpp  ParameterLoader.h  ProxyParameter.h
src/preset/: FileBackedPreset.cpp  FileBackedPreset.h  Preset.cpp  Preset.h
src/processors/: ChainManager.h  EffectChainManager.h  EffectChainProcessor.h  ProcessorChainProcessor.h
src/synth/: MPESynth.h
src/valuedata/: Serialize.h
tests/: BypassMixerTests.cpp  CMakeLists.txt  ParamControllerTests.cpp  ParamRangeTests.cpp  PresetTests.cpp  ProcessStateTests.cpp  ValueFormatterTests.cpp
(+78 files in other folders)
